--- a/css/propioCss.css
+++ b/css/propioCss.css
@@ -211,7 +211,9 @@ and open the template in the editor.
     display: block;
 border: 2px solid cadetblue;
 font-size: 17px;
-    font-style: italic;}
+    font-style: italic;
+margin-top: 12px
+}
 
 
 
